# zrr-docker

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-develop-docker-images.yml  build-docker-base-image.yml  build-docker-images.yml  build-production-docker-images.yml  codestyle-check.yml  docker-image.yml  pr-docker-image-update.yml
composes/: docker-compose.yml
composes/automation/: docker-compose.yml
composes/clash/: docker-compose.yml
composes/frpc/: docker-compose.yml
composes/homepage/: docker-compose.yml
composes/jellyfin/: docker-compose.yml
composes/nginx-proxy-manager/: docker-compose.yml
composes/rclone/: docker-compose.yml
composes/speedtest/: docker-compose.yml
composes/syncthing/: .gitignore  docker-compose.yml
composes/zrr-automation/: docker-compose.yml
composes/zrr-dev/: docker-compose.yml
composes/zrr-production/: docker-compose.yml
dockerfiles/paddle/: Dockerfile
dockerfiles/typst/: Dockerfile
dockerfiles/zrr-base/: Dockerfile
dockerfiles/zrr-caddy/: Dockerfile
dockerfiles/zrr-main/: Dockerfile
dockerfiles/zrr-paddle/: Dockerfile
dockerfiles/zrr-sd/: Dockerfile
dockerfiles/zrr-tools/: Dockerfile  docker-compose.yml  get_ip.py  server.py
dockers/homepage/: docker-compose.yml
dockers/nginx-proxy-manager/: docker-compose.yml
dockers/syncthing/: .gitignore
dockers/zrr-base/: Dockerfile
dockers/zrr-tools/: Dockerfile  docker-compose.yml  get_ip.py
tools/: build-composes.sh  build-docker-image.sh  build_image.py  zrr_docker.py
(+28 files in other folders)
