[project]
name = "zrr-docker"
dynamic = ["version"]
description = "A tool to build Zhan Rongrui's docker images."
authors = [
    {name = "Zhan Rongrui", email = "2742392377@qq.com"},
]
dependencies = [
    "typer>=0.9.0",
    "docker>=6.1.3",
    "invoke>=2.2.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["dokcer", "dokcerfile"]
classifiers = [
    "Topic :: Software Development :: Docker Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.pdm.version]
source = "scm"
write_to = "pdm/models/VERSION"

[tool.pdm.build]
excludes = ["./**/.git"]
source-includes = ["tools", "LICENSE", "README.md"]
editable-backend = "editables"

[tool.pdm.scripts]
test = "pytest"
lint = "pre-commit run --all-files"

[tool.pdm.dev-dependencies]
test = [
    "pdm[pytest]",
    "pytest-cov",
]

[tool.ruff]
line-length = 120
select = [
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PGH",  # pygrep-hooks
    "RUF",  # ruff
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
src = ["src"]
exclude = ["tests/fixtures"]
target-version = "py311"
